--- a/eBookManager/Views/Account/Create.cshtml
+++ b/eBookManager/Views/Account/Create.cshtml
@@ -8,9 +8,21 @@
 
 <form action="/Account/Create" method="post">
     <div class="col-lg-12 margin-bot-20">
-        <div class="col-lg-4"><label class="pull-right pad-top-8">Tên</label></div>
+        <div class="col-lg-4"><label class="pull-right pad-top-8">Tên Đăng nhập <span class="required">*</span> </label></div>
         <div class="col-lg-8">
             <input class="form-control width-300" type="text" value="@Model.UserName" name="UserName" />
+        </div>
+    </div>
+    <div class="col-lg-12 margin-bot-20">
+        <div class="col-lg-4"><label class="pull-right pad-top-8">Mật khẩu <span class="required">*</span> </label></div>
+        <div class="col-lg-8">
+            <input class="form-control width-300" type="password" value="@Model.Password" name="Password" />
+        </div>
+    </div>
+    <div class="col-lg-12 margin-bot-20">
+        <div class="col-lg-4"><label class="pull-right pad-top-8">Họ và tên</label></div>
+        <div class="col-lg-8">
+            <input class="form-control width-300" type="text" value="@Model.Name" name="Name" />
         </div>
     </div>
     <div class="col-lg-12 margin-bot-20">
@@ -28,15 +40,16 @@
     <div class="col-lg-12 margin-bot-20">
         <div class="col-lg-4"><label class="pull-right pad-top-8">Lớp</label></div>
         <div class="col-lg-8">
-            <input class="form-control width-300" type="text" value="@Model.ClassId" />
+            <input class="form-control width-300" type="text" value="@Model.ClassId" name="ClassId" />
         </div>
     </div>
     <div class="col-lg-12 margin-bot-20">
         <div class="col-lg-4"><label class="pull-right pad-top-8">Quyền</label></div>
         <div class="col-lg-8">
-            <input class="form-control width-300" type="text" value="@Model.Role" />
+            <input class="form-control width-300" type="text" value="@Model.Role" name="Role" />
         </div>
     </div>
+
     <div class="col-lg-12 margin-bot-20">
         <div class="col-lg-4"><label class="pull-right pad-top-8"></label></div>
         <div style="float:left;width:300px">
