--- a/eBookManager/Views/Account/EditAccount.cshtml
+++ b/eBookManager/Views/Account/EditAccount.cshtml
@@ -8,9 +8,15 @@
 
 <form action="/Account/EditAccount" method="post">
     <div class="col-lg-12 margin-bot-20">
-        <div class="col-lg-4"><label class="pull-right pad-top-8">Tên</label></div>
+        <div class="col-lg-4"><label class="pull-right pad-top-8">Tên Đăng nhập</label></div>
         <div class="col-lg-8">
-            <input class="form-control width-300" type="text" value="@Model.UserName" name="UserName" />
+            <input class="form-control width-300" disabled type="text" value="@Model.UserName" name="UserName" />
+        </div>
+    </div>
+    <div class="col-lg-12 margin-bot-20">
+        <div class="col-lg-4"><label class="pull-right pad-top-8">Họ và tên</label></div>
+        <div class="col-lg-8">
+            <input class="form-control width-300" type="text" value="@Model.Name" name="Name" />
         </div>
     </div>
     <div class="col-lg-12 margin-bot-20">
@@ -28,13 +34,13 @@
     <div class="col-lg-12 margin-bot-20">
         <div class="col-lg-4"><label class="pull-right pad-top-8">Lớp</label></div>
         <div class="col-lg-8">
-            <input class="form-control width-300" type="text" value="@Model.ClassId" />
+            <input class="form-control width-300" type="text" value="@Model.ClassId" name="ClassId" />
         </div>
     </div>
     <div class="col-lg-12 margin-bot-20">
         <div class="col-lg-4"><label class="pull-right pad-top-8">Quyền</label></div>
         <div class="col-lg-8">
-            <input class="form-control width-300" type="text" value="@Model.Role" />
+            <input class="form-control width-300" type="text" value="@Model.Role" name="Role" />
         </div>
     </div>
     <div class="col-lg-12 margin-bot-20">
