--- a/eBookManager/Views/Shared/_Layout.cshtml
+++ b/eBookManager/Views/Shared/_Layout.cshtml
@@ -148,13 +148,13 @@
                         <li>
                             <a href="navbar.html">
                                 <i class="fa fa-fw fa-wrench"></i>
-                                <span>Cài Đặt Tài Khoản</span>
+                                <span>Thông tin tài khoản</span>
                             </a>
                         </li>
                         <li>
-                            <a href="navbar.html">
+                            <a href="/Account/ChangePassword">
                                 <i class="fa fa-fw fa-cog"></i>
-                                <span>Cài Đặt Khác</span>
+                                <span>Thay đổi mật khẩu</span>
                             </a>
                         </li>
                     </ul>
@@ -268,10 +268,11 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
+                    <a class="nav-link" data-toggle="modal" onclick="openPopupLogout()">
                         <i class="fa fa-fw fa-sign-out"></i>Đăng Xuất
-                    </a>
+                    </a>                    
                 </li>
+                
             </ul>
         </div>
     </nav>
@@ -305,7 +306,7 @@
                     <div class="modal-body">Chọn đăng xuất nếu bạn muốn thoát khỏi trang.</div>
                     <div class="modal-footer">
                         <button class="btn btn-secondary" type="button" data-dismiss="modal">Hủy</button>
-                        <a class="btn btn-primary" href="/Account/Login">Đăng xuất</a>
+                        <a class="btn btn-primary" onclick="logout()">Đăng xuất</a>
                     </div>
                 </div>
             </div>
@@ -330,3 +331,27 @@
 </body>
 
 </html>
+
+<script>
+    function openPopupLogout(id) {
+        $('#exampleModal').modal('show');
+    }
+    function logout() {
+        $.ajax({
+            type: "POST",
+            url: '/Account/Logout',
+            dataType: "json",
+            success: function (response) {
+                $('#exampleModal').modal('hide');
+
+                setTimeout(function () {
+                    //alert(response);
+                    window.location.href = "/Account/Login";
+                }, 500);
+            },
+            error: function (error) {
+
+            }
+        });
+    }
+</script>
