--- a/eBookManager/Views/Shared/_Layout.cshtml
+++ b/eBookManager/Views/Shared/_Layout.cshtml
@@ -157,6 +157,12 @@
                                 <span>Thay đổi mật khẩu</span>
                             </a>
                         </li>
+                        <li>
+                            <a href="/Class/GetAllClasss">
+                                <i class="fa fa-fw fa-cog"></i>
+                                <span>Quản lý lớp học</span>
+                            </a>
+                        </li>                       
                     </ul>
                 </li>
             </ul>
@@ -285,7 +291,7 @@
         <footer class="sticky-footer">
             <div class="container">
                 <div class="text-center">
-                    <small>Copyright © Tran Duc Bien 2018.</small>
+                    <small>Copyright © DATN - Tran Duc Bien 2018.</small>
                 </div>
             </div>
         </footer>
