--- a/eBookManager/Views/Account/Login.cshtml
+++ b/eBookManager/Views/Account/Login.cshtml
@@ -22,7 +22,7 @@
     <script src="/Assets/Themes/plugins/html5shiv.min.js"></script>
     <script src="/Assets/Themes/plugins/respond.min.js"></script>
     <![endif]-->
-    <link rel="shortcut icon" type="image/x-icon" href="/Assets/images/logo-sub.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="~/library.ico" />
 </head>
 <body class="hold-transition login-page">
     <div class="login-box">
