--- a/eBookManager/Views/Class/GetAllClasss.cshtml
+++ b/eBookManager/Views/Class/GetAllClasss.cshtml
@@ -2,7 +2,7 @@
 @using PagedList.Mvc;
 @using eBookManager.Common;
 @{
-    ViewBag.Title = "";
+    ViewBag.Title = "Ứng dụng quản lý thư viện - Danh sách lớp học";
     Layout = "~/Views/Shared/_Layout.cshtml";
 
     var account = (Model.eBookData.Account)Session["CurrentAccount"];
