--- a/eBookManager/Views/Shared/_Layout.cshtml
+++ b/eBookManager/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title></title>
+    <title>Ứng dụng quản lý thư viện</title>
     <script src="~/Assets/Scripts/jquery-2.1.1.min.js"></script>
     <!-- Bootstrap core CSS-->
     <link href="/Assets/Layout/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -18,6 +18,7 @@
     <!-- Custom styles for this template-->
     <link href="/Assets/Layout/css/sb-admin.css" rel="stylesheet">
     <link href="~/Assets/css/datepicker.css" rel="stylesheet" />
+    <link rel="shortcut icon" type="image/x-icon" href="~/library.ico" />
     <script src="~/Assets/Scripts/bootstrap-datepicker.js"></script>
     @{ 
         var account = (Model.eBookData.Account)Session["CurrentAccount"];
@@ -165,7 +166,7 @@
                                 <span>Thay đổi mật khẩu</span>
                             </a>
                         </li>
-                        <li>
+                        <li @if (checkAdmin) { <text> hidden</text> }>
                             <a href="/Class/GetAllClasss">
                                 <i class="fa fa-fw fa-cog"></i>
                                 <span>Quản lý lớp học</span>
