--- a/eBookManager/Views/Account/EditAccount.cshtml
+++ b/eBookManager/Views/Account/EditAccount.cshtml
@@ -7,6 +7,12 @@
 <h2 class="margin-bot-20" style="text-align:center">Cập nhật tài khoản</h2>
 
 <form action="/Account/EditAccount" method="post">
+    <div class="col-lg-12 margin-bot-20" hidden>
+        <div class="col-lg-4"><label class="pull-right pad-top-8">Id</label></div>
+        <div class="col-lg-8">
+            <input class="form-control width-300" type="text" value="@Model.Id" name="Id" />
+        </div>
+    </div>
     <div class="col-lg-12 margin-bot-20">
         <div class="col-lg-4"><label class="pull-right pad-top-8">Tên Đăng nhập</label></div>
         <div class="col-lg-8">
