--- a/eBookManager/Views/Account/GetAllAccounts.cshtml
+++ b/eBookManager/Views/Account/GetAllAccounts.cshtml
@@ -12,7 +12,7 @@
 </p>*@
 @using (Html.BeginForm("GetAllAccounts", "Account", FormMethod.Get))
 {
-    <input type="text" value="@ViewBag.SearchString" class="form-control" name="search" style="width:300px;float:left;margin-right:15px"/>
+    <input type="text" value="@ViewBag.SearchString" class="form-control" name="search" style="width:300px;float:left;margin-right:15px" placeholder="Tìm theo tên hoặc tên đăng nhập"/>
     <button type="submit" class="btn btn-success">Tìm kiếm</button>
 }
 <table class="table table-hover">
