--- a/eBookManager/Views/Book/EditBook.cshtml
+++ b/eBookManager/Views/Book/EditBook.cshtml
@@ -6,8 +6,14 @@
 
 <h2 class="margin-bot-20" style="text-align:center">Cập nhật thông tin sách</h2>
 
-<form action="/Book/Create" method="post">
-    <div class="col-lg-12 margin-bot-20">
+<form action="/Book/EditBook" method="post">
+    <div class="col-lg-12 margin-bot-20" hidden>
+        <div class="col-lg-4"><label class="pull-right pad-top-8">ID</label></div>
+        <div class="col-lg-8">
+            <input class="form-control width-300" type="text" value="@Model.Id" name="Id" />
+        </div>
+    </div>
+        <div class="col-lg-12 margin-bot-20">
         <div class="col-lg-4"><label class="pull-right pad-top-8">Mã sách</label></div>
         <div class="col-lg-8">
             <input class="form-control width-300" type="text" value="@Model.BookCode" name="BookCode" />
