add accountinfo, fix loi sai ID khi update cua account, maintain

--- a/eBookManager/Views/Shared/_Layout.cshtml
+++ b/eBookManager/Views/Shared/_Layout.cshtml
@@ -155,7 +155,7 @@
                     </a>
                     <ul class="sidenav-second-level collapse" id="collapseSettings">
                         <li>
-                            <a href="navbar.html">
+                            <a href="/Account/AccountInfo">
                                 <i class="fa fa-fw fa-wrench"></i>
                                 <span>Thông tin tài khoản</span>
                             </a>
