--- a/eBookManager/Views/Book/GetAllBooks.cshtml
+++ b/eBookManager/Views/Book/GetAllBooks.cshtml
@@ -48,7 +48,7 @@
                             <a class="btn btn-danger"  onclick="openPopupReturnBook(@item.Id)">Trả sách</a>
                         </td>
                     </tr>
-                break;
+                //break;
                 }
                 else
                 {
