giao dien, logo . . .

--- a/eBookManager/Views/Account/Login.cshtml
+++ b/eBookManager/Views/Account/Login.cshtml
@@ -5,6 +5,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Đăng nhập tài khoản</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Tell the browser to be responsive to screen width -->
@@ -15,7 +16,6 @@
     <link rel="stylesheet" href="/Assets/Themes/bootstrap/fonts/ionicons.min.css">
     <link rel="stylesheet" href="/Assets/Themes/dist/css/AdminTTGroup.css">
     <link rel="stylesheet" href="/Assets/Themes/plugins/iCheck/square/blue.css">
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -26,7 +26,9 @@
 </head>
 <body class="hold-transition login-page">
     <div class="login-box">
-
+        <div class="login-logo" >
+             <img class="showlogo"  src="/Assets/Images/1.png">
+        </div>
         <!-- /.login-logo -->
         <div class="login-box-body">
             <form action="/Account/Login" method="post">
