--- a/eBookManager/Views/Shared/_Layout.cshtml
+++ b/eBookManager/Views/Shared/_Layout.cshtml
@@ -278,7 +278,7 @@
                     </form>
                 </li>*@
                 <li class="nav-item">
-                    <a class="nav-link" >
+                    <a href="/Account/AccountInfo" class="nav-link" >
                         <i>Xin chào: @account.UserName</i> 
                     </a>
                 </li>
