--- a/eBookManager/Views/Account/Login.cshtml
+++ b/eBookManager/Views/Account/Login.cshtml
@@ -27,7 +27,7 @@
 <body class="hold-transition login-page">
     <div class="login-box">
         <div class="login-logo" >
-             <img class="showlogo"  src="/Assets/Images/1.png">
+             <img class="showlogo"  src="/Assets/Images/library.png">
         </div>
         <!-- /.login-logo -->
         <div class="login-box-body">
