sửa phần account + thêm lớp cho account

--- a/eBookManager/Views/Account/Create.cshtml
+++ b/eBookManager/Views/Account/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Model.eBookData.Account
+﻿@model eBookManager.Models.AccountModel
 @{
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -6,7 +6,7 @@
 
 <h2 class="margin-bot-20" style="text-align:center">Thêm mới tài khoản</h2>
 
-<form action="/Account/Create" method="post">
+<form id="form-data" @*action="/Account/Create" method="post"*@>
     <div class="col-lg-12 margin-bot-20">
         <div class="col-lg-4"><label class="pull-right pad-top-8">Tên Đăng nhập <span class="required">*</span> </label></div>
         <div class="col-lg-8">
@@ -40,7 +40,12 @@
     <div class="col-lg-12 margin-bot-20">
         <div class="col-lg-4"><label class="pull-right pad-top-8">Lớp</label></div>
         <div class="col-lg-8">
-            <input class="form-control width-300" type="text" value="@Model.ClassId" name="ClassId" />
+            <select name="ClassId"  class="form-control width-300" style="height:34px">
+                @foreach(var cl in Model.Classes)
+                {
+                    <option value="@cl.Id">@cl.ClassName</option>
+                }
+            </select>
         </div>
     </div>
     <div class="col-lg-12 margin-bot-20">
@@ -53,7 +58,25 @@
     <div class="col-lg-12 margin-bot-20">
         <div class="col-lg-4"><label class="pull-right pad-top-8"></label></div>
         <div style="float:left;width:300px">
-            <button class="btn btn-primary pull-right" type="submit">Thêm mới</button>
+            <a class="btn btn-primary pull-right" onclick="createAccount()">Thêm mới</a>
         </div>
     </div>
 </form>
+<script>
+    function createAccount() {
+        $.ajax({
+            type: "POST",
+            url: '/Account/Create?' + $("#form-data").serialize(),
+            dataType: "json",
+            success: function (response) {
+                alert(response);
+                setTimeout(function () {
+                    window.location.href = "/Account/GetAllAccounts";
+                }, 1000);
+            },
+            error: function (error) {
+
+            }
+        });
+    }
+</script>
