--- a/eBookManager/Views/Account/GetAllAccounts.cshtml
+++ b/eBookManager/Views/Account/GetAllAccounts.cshtml
@@ -1,11 +1,14 @@
 ﻿@model PagedList.IPagedList<Model.eBookData.Account>
 @using PagedList.Mvc;
+@using Model.eBookData
 @{
     ViewBag.Title = "";
     Layout = "~/Views/Shared/_Layout.cshtml";
 
     var account = (Model.eBookData.Account)Session["CurrentAccount"];
+    var listClass = (List<Class>)ViewBag.Class;
 }
+
 @if (account.Role == "admin")
 {
     <h2 class="margin-bot-20" style="text-align:center">Danh sách người dùng</h2>
@@ -56,7 +59,13 @@ else
                     <td>@account.UserName</td>
                     <td>@account.Email</td>
                     <td>@account.Address</td>
-                    <td>@account.ClassId</td>
+                    <td>
+                        @if(account.ClassId != null)
+                        {
+                            var cl = listClass.Where(o => o.Id == account.ClassId).FirstOrDefault();
+                            <span>@cl.ClassName</span>
+                        }
+                    </td>
                     <td>
                         <a class="btn btn-primary" href="/Account/EditAccount?accountId=@account.Id">Sửa</a>
                         @*<a class="btn btn-danger">Khóa tài khoản</a>*@
@@ -67,12 +76,18 @@ else
             else
             {
                 <tr>
-                    <td>@(i + 1)</td>
+                    <td>@((Model.PageNumber - 1) * Model.PageSize + i + 1)</td>
                     <td>@item.Name</td>
                     <td>@item.UserName</td>
                     <td>@item.Email</td>
                     <td>@item.Address</td>
-                    <td>@item.ClassId</td>
+                    <td>
+                        @if (item.ClassId != null)
+                        {
+                            var cl = listClass.Where(o => o.Id == item.ClassId).FirstOrDefault();
+                            <span>@cl.ClassName</span>
+                        }
+                    </td>
                     <td>@item.Role</td>
                     <td>
                         @if (item.Status.Contains("active"))
