--- a/eBookManager/Views/Home/Index.cshtml
+++ b/eBookManager/Views/Home/Index.cshtml
@@ -2,30 +2,291 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<div class="container">
+    <div class="info-inday" data-original-title="" title="">
+        <div class="info-inday-box" data-original-title="" title="">
+            <div class="content-info-today step1" href="javascript:void(0)" data-original-title="" title="">
+                <div class="img-today info-box-today">
+                    <svg class="icon-order-dashboard">
+                        <use xlink:href="#icon-order-dashboad" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <svg id="icon-order-dashboad" width="100%" height="100%">
+                                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+<g>
+                                <g>
+                                <path d="M167.306,130.482v-26.146c5.555,1.815,9.048,5.479,9.048,8.876c0,4.143,3.358,7.5,7.5,7.5c4.142,0,7.5-3.357,7.5-7.5
+			c0-11.979-10.095-21.739-24.048-24.345V87.66c0-4.143-3.358-7.5-7.5-7.5c-4.142,0-7.5,3.357-7.5,7.5v1.207
+			c-13.953,2.606-24.048,12.365-24.048,24.345c0,16.74,13.375,23.774,24.048,27.821v26.146c-5.554-1.814-9.048-5.478-9.048-8.875
+			c0-4.143-3.358-7.5-7.5-7.5c-4.142,0-7.5,3.357-7.5,7.5c0,11.979,10.095,21.739,24.048,24.345v1.206c0,4.143,3.358,7.5,7.5,7.5
+			c4.142,0,7.5-3.357,7.5-7.5v-1.206c13.953-2.606,24.048-12.365,24.048-24.345C191.354,141.565,177.979,134.531,167.306,130.482z
+			 M152.306,124.673c-7.518-3.68-9.048-6.892-9.048-11.46c0-3.397,3.493-7.062,9.048-8.876V124.673z M167.307,167.18v-20.336
+			c7.518,3.68,9.048,6.891,9.048,11.46C176.355,161.701,172.862,165.366,167.307,167.18z"></path>
+	</g>
+</g>
+<g>
+                                <g>
+                                <path d="M384.258,224.451H127.742c-4.142,0-7.5,3.358-7.5,7.5v144.291c0,4.143,3.358,7.5,7.5,7.5h256.516
+			c4.143,0,7.5-3.357,7.5-7.5V231.951C391.758,227.808,388.401,224.451,384.258,224.451z M135.242,239.451h129.29v33.098h-129.29
+			V239.451z M264.533,368.743H135.242v-33.097h129.291V368.743z M264.533,320.646L264.533,320.646H135.242v-33.097h129.291V320.646z
+			 M279.532,239.451h41.113v33.098h-41.113V239.451z M320.646,368.743h-41.113v-33.097h41.113V368.743z M320.646,320.646h-41.113
+			v-33.097h41.113V320.646z M376.758,368.742h-41.112v-33.097h41.112V368.742z M376.758,320.646h-41.112v-33.097h41.112V320.646z
+			 M376.758,272.549h-41.112v-33.098h41.112V272.549z"></path>
+	</g>
+</g>
+<g>
+                                <g>
+                                <path d="M328.146,96.193h-16.029c-4.143,0-7.5,3.357-7.5,7.5s3.357,7.5,7.5,7.5h16.029c4.143,0,7.5-3.357,7.5-7.5
+			S332.289,96.193,328.146,96.193z"></path>
+	</g>
+</g>
+<g>
+                                <g>
+                                <path d="M280.05,96.193h-56.114c-4.142,0-7.5,3.357-7.5,7.5s3.357,7.5,7.5,7.5h56.114c4.143,0,7.5-3.357,7.5-7.5
+			S284.193,96.193,280.05,96.193z"></path>
+	</g>
+</g>
+<g>
+                                <g>
+                                <path d="M328.146,128.258h-104.21c-4.142,0-7.5,3.357-7.5,7.5s3.357,7.5,7.5,7.5h104.21c4.143,0,7.5-3.357,7.5-7.5
+			S332.289,128.258,328.146,128.258z"></path>
+	</g>
+</g>
+<g>
+                                <g>
+                                <path d="M328.146,160.322h-16.032c-4.143,0-7.5,3.357-7.5,7.5s3.357,7.5,7.5,7.5h16.032c4.143,0,7.5-3.357,7.5-7.5
+			S332.288,160.322,328.146,160.322z"></path>
+	</g>
+</g>
+<g>
+                                <g>
+                                <path d="M280.049,160.322h-56.113c-4.142,0-7.5,3.357-7.5,7.5s3.357,7.5,7.5,7.5h56.113c4.143,0,7.5-3.357,7.5-7.5
+			S284.192,160.322,280.049,160.322z"></path>
+	</g>
+</g>
+<g>
+                                <g>
+                                <path d="M416.322,0H95.677C78.281,0,64.129,14.152,64.129,31.549v448.902c0,17.396,14.152,31.549,31.548,31.549h320.645
+			c17.396,0,31.549-14.152,31.549-31.549V31.549C447.871,14.152,433.719,0,416.322,0z M432.871,480.451
+			c0,9.125-7.424,16.549-16.549,16.549H95.677c-9.125,0-16.548-7.424-16.548-16.549V31.549C79.129,22.424,86.553,15,95.677,15
+			h320.645c9.125,0,16.549,7.424,16.549,16.549V480.451z"></path>
+	</g>
+</g>
+<g>
+                                <g>
+                                <path d="M408.307,432.871H103.693c-4.142,0-7.5,3.357-7.5,7.5s3.358,7.5,7.5,7.5h304.613c4.143,0,7.5-3.357,7.5-7.5
+			S412.449,432.871,408.307,432.871z"></path>
+	</g>
+</g>
+<g>
+                                <g>
+                                <path d="M408.307,32.064H103.693c-4.142,0-7.5,3.357-7.5,7.5c0,4.143,3.358,7.5,7.5,7.5h304.613c4.143,0,7.5-3.357,7.5-7.5
+			C415.806,35.421,412.449,32.064,408.307,32.064z"></path>
+	</g>
+</g>
+<g>
+                                <g>
+                                <path d="M272.032,464.936h-32.064c-4.142,0-7.5,3.357-7.5,7.5s3.358,7.5,7.5,7.5h32.064c4.143,0,7.5-3.357,7.5-7.5
+			S276.175,464.936,272.032,464.936z"></path>
+	</g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+</svg>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+                            </svg>
+                        </use>
+                    </svg>
+                </div>
+                <div class="info-box info-box-today">
+                    <div class="title">Số đầu sách</div>
+                    <div class="count" style="color:#0088ff ">@ViewBag.CountBook</div>
+                </div>
+            </div>
+        </div>
+        <div class="info-inday-box">
+            <div class="content-info-today step3" href="javascript:void(0)" style="margin-left:15px;margin-right:-8px">
+                <div class="img-today info-box-today">
+                    <svg class="icon-order-dashboard">
+                        <use xlink:href="#icon-customer-dashboad" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <svg id="icon-customer-dashboad" width="100%" height="100%">
+                                <svg id="icon-customer-dashboard" width="100%" height="100%">
+                                    <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 482.9 482.9" style="enable-background:new 0 0 482.9 482.9;" xml:space="preserve"><g><g><path d="M239.7,260.2c0.5,0,1,0,1.6,0c0.2,0,0.4,0,0.6,0c0.3,0,0.7,0,1,0c29.3-0.5,53-10.8,70.5-30.5
+			c38.5-43.4,32.1-117.8,31.4-124.9c-2.5-53.3-27.7-78.8-48.5-90.7C280.8,5.2,262.7,0.4,242.5,0h-0.7c-0.1,0-0.3,0-0.4,0h-0.6
+			c-11.1,0-32.9,1.8-53.8,13.7c-21,11.9-46.6,37.4-49.1,91.1c-0.7,7.1-7.1,81.5,31.4,124.9C186.7,249.4,210.4,259.7,239.7,260.2z
+			 M164.6,107.3c0-0.3,0.1-0.6,0.1-0.8c3.3-71.7,54.2-79.4,76-79.4h0.4c0.2,0,0.5,0,0.8,0c27,0.6,72.9,11.6,76,79.4
+			c0,0.3,0,0.6,0.1,0.8c0.1,0.7,7.1,68.7-24.7,104.5c-12.6,14.2-29.4,21.2-51.5,21.4c-0.2,0-0.3,0-0.5,0l0,0c-0.2,0-0.3,0-0.5,0
+			c-22-0.2-38.9-7.2-51.4-21.4C157.7,176.2,164.5,107.9,164.6,107.3z"></path><path d="M446.8,383.6c0-0.1,0-0.2,0-0.3c0-0.8-0.1-1.6-0.1-2.5c-0.6-19.8-1.9-66.1-45.3-80.9c-0.3-0.1-0.7-0.2-1-0.3
+			c-45.1-11.5-82.6-37.5-83-37.8c-6.1-4.3-14.5-2.8-18.8,3.3c-4.3,6.1-2.8,14.5,3.3,18.8c1.7,1.2,41.5,28.9,91.3,41.7
+			c23.3,8.3,25.9,33.2,26.6,56c0,0.9,0,1.7,0.1,2.5c0.1,9-0.5,22.9-2.1,30.9c-16.2,9.2-79.7,41-176.3,41
+			c-96.2,0-160.1-31.9-176.4-41.1c-1.6-8-2.3-21.9-2.1-30.9c0-0.8,0.1-1.6,0.1-2.5c0.7-22.8,3.3-47.7,26.6-56
+			c49.8-12.8,89.6-40.6,91.3-41.7c6.1-4.3,7.6-12.7,3.3-18.8c-4.3-6.1-12.7-7.6-18.8-3.3c-0.4,0.3-37.7,26.3-83,37.8
+			c-0.4,0.1-0.7,0.2-1,0.3c-43.4,14.9-44.7,61.2-45.3,80.9c0,0.9,0,1.7-0.1,2.5c0,0.1,0,0.2,0,0.3c-0.1,5.2-0.2,31.9,5.1,45.3
+			c1,2.6,2.8,4.8,5.2,6.3c3,2,74.9,47.8,195.2,47.8s192.2-45.9,195.2-47.8c2.3-1.5,4.2-3.7,5.2-6.3
+			C447,415.5,446.9,388.8,446.8,383.6z"></path></g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g></svg>
+                                </svg>
+                            </svg>
+                        </use>
+                    </svg>
+                </div>
+                
+                <div class="info-box info-box-today">
+                    <div class="title">Người dùng</div>
+                    <div class="count" style="color:#0088ff ">@ViewBag.CountAccount</div>
+                </div>            
+            </div>
+        </div>
     </div>
 </div>
+<form id="form-data" action="/Manage/GetBookBorrowsById" method="post">
+    <label style="float:left;margin-right:15px;margin-top:8px">Từ ngày</label>
+    <input type="text" value="@ViewBag.borrowOnMin" class="form-control datepicker" name="borrowOnMin" style="width:200px;float:left;margin-right:15px">
+    <label style="float:left;margin-right:15px;margin-top:8px">Đến ngày</label>
+    <input type="text" value="@ViewBag.borrowOnMax" class="form-control datepicker" name="borrowOnMax" style="width:200px;float:left;margin-right:15px">
+    <button type="submit" class="btn btn-success">Tìm kiếm</button>
+</form>
+<div id="top-sale" style="margin-top:30px;margin-left:100px">
+
+</div>
+<script>
+        $(document).ready(function () {
+            $('.datepicker').datepicker({
+                format: 'dd/mm/yyyy',
+            });
+            $.ajax({
+                type: "GET",
+                contentType: "application/json; charset=utf-8",
+                url: '/Manage/GetBookBorrowsByTimeData?' + $("#form-data").serialize(),
+                dataType: "json",
+                success: function (model) {
+                    var series = [];
+                    var model1 = {};
+                    model1.name = '';
+                    model1.data = model.error ? [] : $.map(model, function (item) {
+                        time = Date.parse(item.BorrowOnKeyString);
+                        return {
+                            x: time,
+                            y: item.IntCount,
+                        };
+                    }).reverse();
+                    series.push(model1);
+                    
+                    bindTopSalesChart(series,0);
+                },
+                error: function (error) {
+
+                }
+            });
+
+            function bindTopSalesChart(series, minY) {
+               
+                Highcharts.setOptions({
+                    lang: {
+                        numericSymbols: ['K', 'M', 'B', 'T', 'P', 'E'],
+                        thousandsSep: ','
+                    }
+                });
+                $('#top-sale').highcharts({
+
+                    chart: {
+                        type: 'line',
+                        height: 320
+                    },
+                    title: {
+                        text: null,
+                        style: {
+
+                            "fontFamily": "Arial"
+                        },
+                        useHTML: true
+                    },
+
+                    xAxis: {
+                        type: 'datetime',
+                        labels: {
+                            format: '{value:%d/%m}',
+                        },
+
+                        tickInterval: 60 * 60 * 24 * 1000 * 7,
+
+                        title: {
+                            enabled: false
+                        }
+                    },
+                    yAxis: {
+                        title: {
+                            enabled: false
+                        },
+                        min: minY,
+                    },
+
+                    legend: {
+                        itemStyle: {
+                            color: '#000000',
+                            fontWeight: 'bold',
+                            fontFamily: 'Arial'
+
+                        },
+                        width: 400,
+                        align: "center",
+                        x: 120,
+                        y: -15,
+                        useHTML: true,
+                        labelFormatter: function () {
+                            return '<div style="text-align: left; width:90px;text-overflow: ellipsis;overflow: hidden;padding-top:2px;"  data-toggle="tooltip" data-placement="bottom" title ="' + this.name + '">' + this.name + '</div>';
+                        }
+                    },
+
+                    tooltip: {
+                        shared: true,
+                        //xDateFormat: '%d-%m-%Y %H:%M'
+                        xDateFormat: '%d/%m/%Y',
+                        borderWidth: 1,
+                        backgroundColor: "rgba(255,255,255,1)",
+                        shadow: false,
+                        useHTML: true,
+                    },
+                    exporting: {
+                        buttons: {
+                            contextButton: {
+                                enabled: false
+                            }
+                        }
+                    },
+
+                    series: series
+                }, function (chart) { // on complete
+
+                });
+                $(function () {
+                    $('div#line-chart>div > svg >text').css("font-size", "0");
+                });
+            }
+        });
+</script>
