--- a/eBookManager/Views/Account/ChangePassword.cshtml
+++ b/eBookManager/Views/Account/ChangePassword.cshtml
@@ -6,43 +6,23 @@
 
 <h2 class="margin-bot-20" style="text-align:center">Thay đổi mật khẩu</h2>
 
-@*<form action="/Account/ChangePassword" method="post">*@
-<form id="form-data" @*action="/Account/Create" method="post"*@>
-        <div class="col-lg-12 margin-bot-20">
-            <div class="col-lg-4"><label class="pull-right pad-top-8">Mật khẩu mới <span class="required">*</span></label></div>
-            <div class="col-lg-8">
-                <input class="form-control width-300" type="password" value="@Model.Password" name="Password" />
-            </div>
+<form action="/Account/ChangePassword" method="post">
+    <div class="col-lg-12 margin-bot-20">
+        <div class="col-lg-4"><label class="pull-right pad-top-8">Mật khẩu mới <span class="required">*</span></label></div>
+        <div class="col-lg-8">
+            <input class="form-control width-300" type="password" name="Password" />
         </div>
-        <div class="col-lg-12 margin-bot-20">
-            <div class="col-lg-4"><label class="pull-right pad-top-8">Xác nhận mật khẩu <span class="required">*</span></label></div>
-            <div class="col-lg-8">
-                <input class="form-control  width-300" type="password" value="@Model.Password" name="Password" />
-            </div>
+    </div>
+    <div class="col-lg-12 margin-bot-20">
+        <div class="col-lg-4"><label class="pull-right pad-top-8">Xác nhận mật khẩu <span class="required">*</span></label></div>
+        <div class="col-lg-8">
+            <input class="form-control  width-300" type="password" name="Password" />
         </div>
-        <div class="col-lg-12 margin-bot-20">
-            <div class="col-lg-4"><label class="pull-right pad-top-8"></label></div>
-            <div style="float:left;width:300px">
-                <button class="btn btn-primary pull-right" onclick="changePassword()">Thay đổi</button>
-            </div>
+    </div>
+    <div class="col-lg-12 margin-bot-20">
+        <div class="col-lg-4"><label class="pull-right pad-top-8"></label></div>
+        <div style="float:left;width:300px">
+            <button class="btn btn-primary pull-right" type="submit">Thay đổi</button>
         </div>
-    </form>
-
-<script>
-    function changePassword() {
-        $.ajax({
-            type: "POST",
-            url: '/Account/ChangePassword?' + $("#form-data").serialize(),
-            dataType: "json",
-            success: function (response) {
-                alert(response);
-                setTimeout(function () {
-                    window.location.href = "/Account/AccountInfo";
-                }, 1000);
-            },
-            error: function (error) {
-
-            }
-        });
-    }
-</script>
+    </div>
+</form>
